[project]
name = "dm-mosaic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.44.2",
    "diffusers>=0.30.1",
    "accelerate>=0.33.0",
    "einops>=0.8.0",
    "ffmpeg-python>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "ruff>=0.6.2",
    "scipy>=1.14.1",
    "timm>=1.0.9",
    "opencv-python>=4.10.0.84",
    "datasets>=2.21.0",
    "matplotlib>=3.9.2",
    "torchmetrics>=1.4.1",
    "torchinfo>=1.8.0",
    "torchdata>=0.8.0",
    "polars>=1.5.0",
    "xformers>=0.0.27.post2",
    "nnunet>=1.7.1",
    "tqdm>=4.66.5",
    "lightning>=2.4.0",
    "tensorboard>=2.17.1",
    "segmentation-models-pytorch==0.3.4",
    "torchao>=0.4.0",
    "fightingcv-attention>=1.0.0",
    "xgboost>=2.1.1",
    "qdrant-client>=1.11.1",
    "numpy>=1.26.4",
    "torch==2.4.1+cu124",
    "torchvision==0.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
